k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventhub-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          - path: /api/events(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          - path: /api/registrations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          - path: /api/docs(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          - path: /api/participants(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: node-service
                port:
                  number: 3000
